# mod_depends

./: .gitignore  .gitmodules  Makefile.am  NOTICE  autogen.sh  configure.ac  index.xml
include/: mod_depends.h
src/: Makefile.am  mod_depends.c
